syntax = "proto3";
package in.statelogic.grpc;
option java_multiple_files = true;

message CmdResponse {
  uint32 statusCode = 1;
  string statusMessage = 2;
}